deprecated/compiler/tests/compile_fail/invalid_constraints_pack1.lg
/* Copyright 2014 Stanford University and Los Alamos National Security, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#line 0

// fails-with:
// TypeError:
// tests/compile_fail/invalid_constraints_pack1.lg:18:2:
// Invalid constraint s <= r requested in pack expression

task main() {}

struct foo<r: region<foo<?>>>[s: region<foo<?>>]
  , s <= r
{
  x: int,
}

task bar()
{
  let r = region<foo<?>>(1);
  let s = region<foo<?>>(1);
  pack {x: 0} as foo<r>[s];
}
